# pcb-dataset-generator

./: .dockerignore  .gitignore  .gitmodules  DOMAIN_RANDOMIZATION.md  Dockerfile  PRODUCTION_PLAN.md  README.md  docker-compose.yml  pyproject.toml
config/: pipeline.yaml  placement.yaml  render.yaml
notebooks/: README.md  pcb_segmentation_training.ipynb  requirements.txt
report/: pcb_segmentation_paper.tex
report/figures/: architecture.mmd
scripts/: blender_import_script.py  blenderproc_render_script.py  error_helper.py  generate_batch.py  generate_intermediate.py  generate_single.py  render_from_intermediate.py  test_container.sh
scripts/slurm/: array_job.sh  cpu_preprocessing_array.sh  gpu_rendering_array.sh  submit.py  submit_split_pipeline.py
src/pcb_dataset/: __init__.py  board.py  converter.py  exporter.py  importer.py  pipeline.py  placement.py  placement_temp.py  renderer.py  routing.py
src/pcb_dataset/utils/: __init__.py  config.py  logging.py  paths.py  validation.py
